Updated Index.html as per in comments

--- a/index.html
+++ b/index.html
@@ -113,13 +113,15 @@
 
              <li><a href="https://github.com/kashyapkumar-pdf">Kashyap Kumar</a></li>
              <li><a href="https://github.com/guptaushma">Ushma Gupta</a></li>
-             <li><a href="https://github.com/ashwithpoojary98">Ashwith</a></li>
+
 
 
 
 
 <li><a href="https://github.com/p">p Sharma</a></li>
             <li><a href="https://github.com/fatimareefat">FATIMA REEFAT</a></li>
+            
+             <li><a href="https://github.com/lechu24">Lakshmi Narayanan</a></li>
 
          </ol>
       </div>
